<resources>
    <string name="app_name">淡商校務通</string>
    <string name="appAdMob">ca-app-pub-7280574531410132~7166269003</string>
    <string name="AdMob">ca-app-pub-7280574531410132/6747466601</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="not_login">尚未登入</string>
    <string name="click_to_login">點擊登入</string>
    <string name="campus_information">行事曆</string>
    <string name="school_timetable">靠北淡商</string>
    <string name="semester_results">學期成績</string>
    <string name="lack_of_records">學期記錄</string>
    <string name="OnlineRepair">線上報修</string>
    <string name="Traffic">交通資訊</string>
    <string name="about_us">關於我們</string>
    <string name="sing_out">登出</string>
    <string name="close">關閉</string>
    <string name="no_NetWork">目前沒有網路連接</string>
    <string name="about_author_title">作者</string>
    <string name="about_author_content">方毅恆</string>
    <string name="about_thx_title">特別感謝</string>
    <string name="about_thx_content">鄭賓少</string>
    <string name="about_contact_us">聯絡我們</string>
    <string name="about_open_source_title">MIT License</string>
    <string name="github_link">https://github.com/vn7n24fzkq/TSVS_Application</string>
    <string name="about_open_source_content">MIT License

Copyright (c) 2017 VN7

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.</string>
    <string name="json_license">simplejson</string>
</resources>